# argos

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy_fly.ps1  fly.toml  pyproject.toml  requirements.txt  start_argos.bat  supervisord.conf
.streamlit/: config.toml  secrets.toml.example
config/: risk_rules.yaml  settings.yaml  strategy_params.json
src/argos/: main.py  scheduler.py
src/argos/dashboard/: app.py
src/argos/database/: db.py  models.py  repositories.py
src/argos/learning/: learning_agent.py
src/argos/market_data/: base_provider.py  coingecko.py  normalizer.py
src/argos/strategies/: simple_momentum.py
src/argos/trading/: paper_engine.py  portfolio.py  position_manager.py  trade_lifecycle.py
src/argos/utils/: logger.py
tests/: conftest.py  test_database.py  test_learning_agent.py  test_market_data.py  test_paper_engine.py  test_scheduler.py
